# quatro

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: pytest.yaml
script/: launch_single_game.py
src/quatro/: flappy_butterfly.py
src/quatro/control/: control.py
src/quatro/engine/: ellipse.py  endless_track.py  maths.py  pinhole_camera.py  planes.py  primitives.py
src/quatro/games/: flappy_butterfly.py  flappy_butterfly_interactive_pipe.py  running_bunny.py
src/quatro/graphics/: background.py
src/quatro/graphics/animation/: bunny.py  butterfly.py  butterfly_numpy.py  wheat.py
src/quatro/graphics/assets/: image_assets.py
src/quatro/sound/: sound.py
src/quatro/sound/assets/: sound_assets.py
src/quatro/system/: input_handler.py  quit.py  window.py
test/: test_draw.py
